@@ -27,7 +27,8 @@ import sys
  ONE_PARAM,  # arg may occur once, req'd parameter
  OPT_PARAM,  # arg may occur once, optional parameter
  MULT_PARAM, # arg may occur N times, w/ parameter
- ) = range(0,4)
+ COUNT_PARAM, # arg may occur N times, value is the count
+ ) = range(0,5)
 
 class OptionError(Exception):
     val = 1
@@ -111,6 +112,11 @@ def addOptions(parser, argDef, skip=None):
         elif paramType == MULT_PARAM:
             parser.add_option(action='append', dest=name, help=help, 
                               metavar=meta, *flagNames)
+        elif paramType == COUNT_PARAM:
+            parser.add_option(action='count',
+                              dest=name, help=help, metavar=meta,
+                              *flagNames)
+
 
 def processArgs(argDef, cfgMap, cfg, usage, argv=sys.argv):
     """Mostly backwards-compatible (with earlier conary processArgs)
@@ -150,7 +156,7 @@ def _processArgs(params, cfgMap, cfg, usage, argv=sys.argv, version=None,
         d = params[defaultGroup]
     else:
         d = params
-    d['debug'] = NO_PARAM, 'Print debugging information'
+    d['debug'] = COUNT_PARAM, 'Print helpful debugging output (use multiple times for internal debug info)'
     d['debugger'] = (NO_PARAM, optparse.SUPPRESS_HELP)
 
     for (arg, name) in cfgMap.items():
@@ -183,8 +189,11 @@ def _processArgs(params, cfgMap, cfg, usage, argv=sys.argv, version=None,
                                             debugCtrlC=True)
 
     if 'debug' in argSet:
+        if argSet['debug'] == 1:
+            log.setVerbosity(log.DEBUG)
+        else:
+            log.setVerbosity(log.LOWLEVEL)
 	del argSet['debug']
-	log.setVerbosity(log.LOWLEVEL)
     else:
 	log.setVerbosity(log.WARNING)
 
